objects/Knowledge__kav/fields/Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Article_Body__c</fullName>
    <description>Main content for knowledge articles.</description>
    <label>Article Body</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>