objects/Knowledge__kav/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Copy of the Blog Author Name to prevent community users from accessing author details. Used in knowledge compact header.</description>
    <formula>Blog_Author__r.Name</formula>
    <label>Author</label>
    <type>Text</type>
</CustomField>