objects/Knowledge__kav/fields/Blog_Author2__c.field-meta.xml
<CustomField>
    <fullName>Blog_Author2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For when more than one community author exists</description>
    <label>Blog Author2</label>
    <referenceTo>Blog_Authors__c</referenceTo>
    <relationshipLabel>Knowledge (Blog Author2)</relationshipLabel>
    <relationshipName>Knowledge1</relationshipName>
    <type>Lookup</type>
</CustomField>