objects/Knowledge__kav/fields/Blog_Author__c.field-meta.xml
<CustomField>
    <fullName>Blog_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a blog author for a blog knowledge base article.</description>
    <label>Blog Author</label>
    <referenceTo>Blog_Authors__c</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>