objects/Knowledge__kav/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <description>Name of the user that created that article. Used for community update data migration only.</description>
    <label>Created By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>