objects/Knowledge__kav/fields/Original_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Id__c</fullName>
    <description>Id of the original record either from migration from a sandbox or from a different record type e.g. post</description>
    <label>Original Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>