objects/Knowledge__kav/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Used to identify product related content.</description>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Comply</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Core Platform</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Enforce</fullName>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
            <value>
                <fullName>Integrity Monitor</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Protect</fullName>
            </value>
            <value>
                <fullName>Reveal</fullName>
            </value>
            <value>
                <fullName>Threat Response</fullName>
            </value>
            <value>
                <fullName>Trends</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>