objects/Knowledge__kav/fields/Solution_Version__c.field-meta.xml
<CustomField>
    <fullName>Solution_Version__c</fullName>
    <description>Identify the Tanium Solution Version to which an article is related. Should not be null if a Solution is selected.</description>
    <inlineHelpText>Only input numbers. For example: 2.1.2</inlineHelpText>
    <label>Solution Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>