objects/Knowledge__kav/recordTypes/Best_Practices.recordType-meta.xml
<RecordType>
    <fullName>Best_Practices</fullName>
    <active>true</active>
    <description>Use for blog articles in the Tanium Customer Community</description>
    <label>Best Practices</label>
</RecordType>