objects/Knowledge__kav/recordTypes/Knowledge_Bytes.recordType-meta.xml
<RecordType>
    <fullName>Knowledge_Bytes</fullName>
    <active>true</active>
    <description>Community Article Type</description>
    <label>Knowledge Bytes</label>
</RecordType>