objects/Knowledge__kav/recordTypes/Navigating_to_Value.recordType-meta.xml
<RecordType>
    <fullName>Navigating_to_Value</fullName>
    <active>true</active>
    <description>Community Article Type</description>
    <label>Navigating to Value</label>
</RecordType>