objects/Knowledge__kav/recordTypes/ProductFeatureHighlights.recordType-meta.xml
<RecordType>
    <fullName>ProductFeatureHighlights</fullName>
    <active>true</active>
    <description>Tanium Community Product Feature and Highlights category</description>
    <label>Product Feature Highlights</label>
</RecordType>