objects/Knowledge__kav/recordTypes/Support_Article.recordType-meta.xml
<RecordType>
    <fullName>Support_Article</fullName>
    <active>true</active>
    <description>Community Articles posted to Support Portal</description>
    <label>Support Article</label>
</RecordType>