objects/Knowledge__kav/recordTypes/Tanium_Vulnerability.recordType-meta.xml
<RecordType>
    <fullName>Tanium_Vulnerability</fullName>
    <active>true</active>
    <label>Tanium Vulnerability</label>
</RecordType>