objects/Knowledge__kav/recordTypes/Video_Tutorials.recordType-meta.xml
<RecordType>
    <fullName>Video_Tutorials</fullName>
    <active>true</active>
    <description>Community Article Type</description>
    <label>Video Tutorials</label>
</RecordType>