objects/Knowledge__kav/recordTypes/Vulnerability_Advisories.recordType-meta.xml
<RecordType>
    <fullName>Vulnerability_Advisories</fullName>
    <active>true</active>
    <description>Community Article Type</description>
    <label>Vulnerability Advisories</label>
</RecordType>