objects/Knowledge__kav/listViews/Endpoint_Security_Blog.listView-meta.xml
<ListView>
    <fullName>Endpoint_Security_Blog</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Topics</field>
        <operation>includes</operation>
        <value>ESS Blog</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Endpoint Security Blog</label>
</ListView>