objects/Knowledge__kav/listViews/Published_Articles_Hidden_from_Customer.listView-meta.xml
<ListView>
    <fullName>Published_Articles_Hidden_from_Customer</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_CSP</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Published Articles Hidden from Customer</label>
</ListView>