objects/Knowledge__kav/listViews/Tanium_Vulnerability.listView-meta.xml
<ListView>
    <fullName>Tanium_Vulnerability</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Tanium_Vulnerability</value>
    </filters>
    <label>Tanium Vulnerability</label>
</ListView>